# top-of-book-trades

./: README.md
binance-connector/: Dockerfile  binance_connect.py  docker-compose.yaml  pyflink_test.py  pyproject.toml  quix_consumer.py
binance-connector/pinot-config/: schema.json  table-config.json
