[tool.poetry]
name = "binance-connect"
version = "0.1.0"
description = "Binance WebSocket connector with Kafka integration"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
apache-flink = "^1.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"