[tool.poetry]
name = "binance-connect"
version = "0.1.0"
description = "Binance WebSocket connector with Kafka integration and DuckDB storage"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
python-binance = "^1.0.16"
kafka-python = "^2.0.2"
quixstreams = "^2.8.0"
numpy = "1.23.5"
duckdb = "^0.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"